uploading to dev branch

--- a/team.html
+++ b/team.html
@@ -9,10 +9,11 @@ bodyClass: page-team-list
     <div class="row">
       <div class="col-12">
         <h1>Meet The Team</h1>
-        <p>
+        <!-- <p>
           Our team of qualified accountants and financial consultants can help
           your business at any stage of it's growth.
-        </p>
+        </p> -->
+        <p>RJ Tax & Accountants has been established to provide tailored and proactive advice that will be suitable to individual or business clients. </p>
       </div>
     </div>
   </div>
