change the about us word

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ bodyClass: page-home
 
 <div class="intro pb-4">
   <div class="container">
-    <h1>Serif - Jekyll Small Business Theme.</h1>
+    <h1>About us</h1>
     <!-- <p>Our business helps hundreds of customers with their accounting and taxation needs each year.</p> -->
     <p>RJ Consultants provides a full range of accounting and taxation services for both individual and business entities.
       <br/><br/>
