uploading to dev branch (#4)
* uploading to dev branch

* change the about us word

Co-authored-by: frsummit@simplexhub.com <www.frsummit1@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@ bodyClass: page-home
 
 <div class="intro pb-4">
   <div class="container">
-    <h1>Serif - Jekyll Small Business Theme.</h1>
-    <p>Our business helps hundreds of customers with their accounting and taxation needs each year.</p>
+    <h1>About us</h1>
+    <!-- <p>Our business helps hundreds of customers with their accounting and taxation needs each year.</p> -->
+    <p>RJ Consultants provides a full range of accounting and taxation services for both individual and business entities.
+      <br/><br/>
+      We understand your business processes to provide tailored solutions and proactive advice in a cost effective manner.
+      </p>
   </div>
 </div>
 
