--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ bodyClass: page-home
 <div class="container pt-2">
   <div class="call">
     <div class="call-box-top">
-      <div class="call-phone"><strong>Phone: </strong> {{ site.data.contact.phone }} </div>
-      <div class="call-email"><strong>Email: </strong>
+      <div class="call-phone"><i class="fas fa-phone-alt"></i> <strong>Phone: </strong> {{ site.data.contact.phone }} </div>
+      <div class="call-email"><i class="far fa-envelope"></i> <strong>Email: </strong>
         <a href="mailto:{{ site.data.contact.email }}">
           {{ site.data.contact.email }}
         </a>
@@ -42,6 +42,7 @@ bodyClass: page-home
         <div class="service-content">
           <h2 class="service-title">
             <a href="{{site.baseurl}}{{ service.url }}">{{ service.title }}</a>
+            <i class="fas fa-angle-right"></i>
           </h2>
           {{ service.content | markdownify | strip_html | truncate: 100 }}
         </div>
