--- a/services.html
+++ b/services.html
@@ -26,6 +26,7 @@ bodyClass: page-services-list
         <div class="service-content">
           <h2 class="service-title">
             <a href="{{site.baseurl}}{{ service.url }}">{{ service.title }}</a>
+            <i class="fas fa-angle-right"></i>
           </h2>
           {{ service.content | markdownify | strip_html | truncate: 100 }}
         </div>
