--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: RjTax
+title: RJ Tax
 layout: default
 bodyClass: page-home
 ---
@@ -18,12 +18,13 @@ bodyClass: page-home
 <div class="container pt-2">
   <div class="call">
     <div class="call-box-top">
-      <div class="call-phone"><i class="fas fa-phone-alt"></i> <strong>Phone: </strong> {{ site.data.contact.phone }} </div>
-      <div class="call-email"><i class="far fa-envelope"></i> <strong>Email: </strong>
+      <div class="call-phone mb-1"><span class="address-icon"><i class="fas fa-phone-alt"></i></span> <span class="about-contact"><strong>Phone: </strong> {{ site.data.contact.phone }}</span> </div>
+      <div class="call-email mb-1"><span class="address-icon"><i class="far fa-envelope"></i></span> <span class="about-contact"><strong>Email: </strong>
         <a href="mailto:{{ site.data.contact.email }}">
           {{ site.data.contact.email }}
-        </a>
+        </a></span>
       </div>
+      <!-- <div class="call-phone mb-1"> <span class="about-contact"><strong>Contact us for an obligation free quote.</strong></span> </div> -->
     </div>
     <div class="call-box-bottom">
       <a href="{{site.baseurl}}/contact" class="button">Contact</a>
@@ -31,34 +32,43 @@ bodyClass: page-home
   </div>
 </div>
 
-<div class="container pt-8 pt-md-10">
+<div id="services" class="container pt-5 pt-md-10">
   <div class="row justify-content-start">
-    <div class="col-12">
-      <h2 class="title-3 text-dark mb-3">Our Services</h2>
+    <div class="col-12 header-title">
+      <h2 class="title-3 text-dark mb-2">Our Services</h2>
     </div>
     {% for service in site.services %}
-    <div class="col-12 col-md-4 mb-1">
+    <div class="col-12 col-md-6 mb-1">
       <div class="service service-summary">
         <div class="service-content">
           <h2 class="service-title">
-            <a href="{{site.baseurl}}{{ service.url }}">{{ service.title }}</a>
-            <i class="fas fa-angle-right"></i>
+            <a>{{ service.title }}</a>
           </h2>
-          {{ service.content | markdownify | strip_html | truncate: 100 }}
+          {{ service.content | markdownify | strip_html }}
         </div>
       </div>
     </div>
     {% endfor %}
-    <div class="col-12 text-center">
-      <a class="button button-primary mt-2" href="{{site.baseurl}}/services">View All Services</a>
+  </div>
+</div>
+
+
+
+<div id="team" class="container pt-3 pt-md-7">
+  <div class="row">
+    <div class="col-12">
+      <h2 class="title-3 text-dark mb-2">Meet The Team</h2>
+    </div>
+    <div class="col-12 col-md-12">
+      <p>RJ Tax & Accountants has been established to provide tailored and proactive advice that will be suitable to individual or business clients. </p>
     </div>
   </div>
 </div>
 
-<div class="container pt-5 pb-5 pt-md-7 pb-md-7">
+<div id="features" class="container pt-3 pt-md-7">
   <div class="row justify-content-center">
     <div class="col-12">
-      <h2 class="title-3 text-dark mb-4">Our Features</h2>
+      <h2 class="title-3 text-dark mb-2">Our Features</h2>
     </div>
     {% for feature in site.data.features %}
     <div class="col-12 col-md-6 col-lg-4 mb-2">
@@ -72,3 +82,26 @@ bodyClass: page-home
     {% endfor %}
   </div>
 </div>
+
+<div class="container pt-2 mb-5">
+  <div class="call w-100">
+    <div class="call-box-top">
+      <div class="call-phone mb-1"><span class="address-icon"><i class="fas fa-phone-alt"></i></span> <span class="about-contact"><strong>Phone: </strong> {{ site.data.contact.phone }}</span> </div>
+      <div class="call-email mb-1"><span class="address-icon"><i class="far fa-envelope"></i></span> <span class="about-contact"><strong>Email: </strong>
+        <a href="mailto:{{ site.data.contact.email }}">
+          {{ site.data.contact.email }}
+        </a></span>
+      </div>
+      <div class="call-phone mb-1"> <span class="about-contact"><strong>Contact us for an obligation free quote.</strong></span> </div>
+    </div>
+    <div class="call-box-bottom">
+      <a href="{{site.baseurl}}/contact" class="button">Contact</a>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
