Email Address Change

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ bodyClass: page-home
       <div class="call-email mb-1"><span class="address-icon"><i class="far fa-envelope"></i></span> <span class="about-contact"><strong>Email: </strong>
         <a href="mailto:{{ site.data.contact.email }}">
           {{ site.data.contact.email }}
-        </a></span>
+        </a></span></span>
       </div>
       <!-- <div class="call-phone mb-1"> <span class="about-contact"><strong>Contact us for an obligation free quote.</strong></span> </div> -->
     </div>
